syntax = "proto3";

option java_package = "com.github.scaars10.pecanraft";
option java_multiple_files = true;

message ClientRequest
{
  int32 key = 1;
  int32 value = 2;
}

message ClientResponse
{
  bool success = 1;
  int32 leaderId = 2;
}
